--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -1,5 +1,5 @@
 @inproceedings{Cherlin:2005:SMF:1090122.1090145,
- author = {Cherlin, Joseph Jacob and Samavati, Faramarz and Sousa, Mario Costa and Jorge, Joaquim A.},
+ author = {Cherlin, J.J. and Samavati, F. and Sousa, M.C. and Jorge, J.A.},
  title = {Sketch-based modeling with few strokes},
  booktitle = {Proceedings of the 21st spring conference on Computer graphics},
  series = {SCCG '05},
@@ -17,7 +17,7 @@
 } 
 
 @article {CGF:CGF1129,
-author = {Schmidt, Ryan and Singh, Karan},
+author = {Schmidt, R. and Singh, K.},
 title = {Sketch-Based Procedural Surface Modeling and Compositing Using Surface Trees},
 journal = {Computer Graphics Forum},
 volume = {27},
@@ -126,7 +126,7 @@ year = {2008},
 }
 
 @inproceedings{Boesch:2011:Online,
-author = {Boesch, Florian},
+author = {Boesch, F.},
 title = {WebGL GPU Landscaping and Erosion},
 booktitle = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion/},
 month = nov,
@@ -134,8 +134,41 @@ year = {2011},
 url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion/}
 }
 
+@inproceedings{autocad,
+author = {Autodesk},
+title = {Autodesk AutoCAD},
+booktitle = {http://usa.autodesk.com/autocad/},
+url = {http://usa.autodesk.com/autocad/}
+}
+
+
+@inproceedings{3dsmax,
+author = {Autodesk},
+title = {Autodesk 3ds Max},
+booktitle = {http://usa.autodesk.com/3ds-max/},
+url = {http://usa.autodesk.com/3ds-max/}
+}
+
+@article{mallet1992gocad,
+  title={GOCAD: A computer aided design program for geological applications},
+  author={Mallet, JL},
+  journal={Three-dimensional modeling with geoscientific information systems},
+  volume={354},
+  pages={123--142},
+  year={1992},
+  publisher={NATO ASI}
+}
+
+
+@inproceedings{sketchup,
+author = {Google},
+title = {SketchUp},
+booktitle = {http://www.sketchup.com/},
+url = {http://www.sketchup.com/}
+}
+
 @inproceedings{Igarashi:1999:TSI:311535.311602,
- author = {Igarashi, Takeo and Matsuoka, Satoshi and Tanaka, Hidehiko},
+ author = {Igarashi, T. and Matsuoka, S. and Tanaka, H.},
  title = {Teddy: a sketching interface for 3D freeform design},
  booktitle = {Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
  series = {SIGGRAPH '99},
@@ -180,7 +213,7 @@ url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion
 }
 
 @inproceedings{Watanabe:2004:SIT:1186415.1186500,
- author = {Watanabe, Nayuko and Igarashi, Takeo},
+ author = {Watanabe, N. and Igarashi, T.},
  title = {A sketching interface for terrain modeling},
  booktitle = {ACM SIGGRAPH 2004 Posters},
  series = {SIGGRAPH '04},
@@ -196,7 +229,7 @@ url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion
 } 
 
 @inproceedings{Cockett:Online,
-author = {Cockett, Rowan},
+author = {Cockett, R.},
 title = {Visible Geology},
 booktitle = {http://app.visiblegeology.com/},
 url = {http://app.visiblegeology.com/}
@@ -212,7 +245,7 @@ url = {http://app.visiblegeology.com/}
 
 @article{jessell1981noddy,
   title={Noddy: an interactive map creation package},
-  author={Jessell, MW},
+  author={Jessell, M.W.},
   journal={Unpublished MSc Thesis, University of London},
   year={1981}
 }
@@ -250,7 +283,7 @@ url = {http://app.visiblegeology.com/}
 
 @inproceedings{tasse2012enhanced,
   title={Enhanced Texture-Based Terrain Synthesis on Graphics Hardware},
-  author={Tasse, FP and Gain, J. and Marais, P.},
+  author={Tasse, F.P. and Gain, J. and Marais, P.},
   booktitle={Computer Graphics Forum},
   year={2012},
   organization={Wiley Online Library}
@@ -312,7 +345,7 @@ url = {http://app.visiblegeology.com/}
 
 
 @inproceedings{Gain:2009:TS:1507149.1507155,
- author = {Gain, James and Marais, Patrick and Strasser, Wolfgang},
+ author = {Gain, J. and Marais, P. and Strasser, W.},
  title = {Terrain sketching},
  booktitle = {Proceedings of the 2009 symposium on Interactive 3D graphics and games},
  series = {I3D '09},
@@ -327,6 +360,16 @@ url = {http://app.visiblegeology.com/}
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@inproceedings{lidal2012geological,
+  title={Geological storytelling: graphically exploring and communicating geological sketches},
+  author={Lidal, E.M. and Hauser, H. and Viola, I.},
+  booktitle={Proceedings of the International Symposium on Sketch-Based Interfaces and Modeling},
+  pages={11--20},
+  year={2012},
+  organization={Eurographics Association}
+}
+
 
 @article{natalirapid,
   title={Rapid Visualization of Geological Concepts},
@@ -356,6 +399,16 @@ Information Solutions (SIS)},
   year={2012},
   organization={Eurographics Association}
 }
+
+@inproceedings{applegate2011sketch,
+  title={A sketch-based system for highway design},
+  author={Applegate, C.S. and Laycock, S.D. and Day, A.M.},
+  booktitle={Proceedings of the Eighth Eurographics Symposium on Sketch-Based Interfaces and Modeling},
+  pages={55--62},
+  year={2011},
+  organization={ACM}
+}
+
 
 @inproceedings{natali2013modeling,
   title={Modeling Terrains and Subsurface Geology},
